# astalink

./: .env.example  .gitignore  ALLOCATION_MIGRATION.md  Makefile  README.md  SUPABASE_SETUP.md  docker-compose.fe-prod.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  prd-astalink.md
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: main.py
backend/app/agents/: chat_agent.py  graph.py  intents.py  qa.py  rejection.py  report.py  state.py  stubs.py  summary.py
backend/app/agents/allocation/: constraints.py  devils_advocate.py  engine.py  intake.py  node.py  normalizer.py  quality.py  schemas.py
backend/app/agents/business/: dcf.py  erp_connector.py  node.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: allocation_config.py  checkpointer.py  config.py  email.py  gemini.py  holdings.py  metrics.py  ownership.py  pin.py  pinecone.py  security.py  supabase_admin.py  wallet.py
backend/app/integrations/: broker.py  chart.py  openfinance.py  whatsapp.py
backend/app/models/: approvals.py  audit.py  chat.py  portfolio.py
backend/migrations/: 0001_workspaces.sql  0002_audit_log.sql  0003_allocation_plans.sql  0004_transactions.sql  0005_pin_codes.sql  0006_regulation_documents.sql  0007_rls_policies.sql  0008_langgraph_checkpoints.sql  0009_whatsapp.sql  0010_businesses.sql  0011_workspace_cash_balance.sql  0012_allocation_layer0.sql  0013_holdings.sql  README.md
backend/tests/: conftest.py  test_agent_workspace_ownership.py  test_allocation_constraints.py  test_allocation_devils_advocate.py  test_allocation_engine.py  test_allocation_intake.py  test_allocation_quality.py  test_approvals_endpoint.py  test_audit_endpoint.py  test_auth_api.py  test_broker_sandbox.py  test_business_api.py  test_business_dcf.py  test_business_node.py  test_chart.py  test_chat.py  test_chat_agent.py  test_checkpointer.py  test_compose.py  test_config.py  test_dependencies.py  test_deps.py  test_dockerfile.py  test_email.py  test_env_example.py  test_execution_idempotency.py  test_execution_node.py  test_gemini_client.py  test_graph_endpoint.py  test_graph_wiring.py  test_health.py  test_hitl_node.py  test_holdings.py  test_intent_classifier.py  test_legal_chunker.py  test_legal_docs.py  test_legal_endpoint.py  test_legal_grader.py  test_legal_node.py  test_legal_retriever.py  (+37 more)
backend/tests/data/: sample_financials.csv  tiny_ojk_fixture.txt
(+159 files in other folders)
